operators/victoriametrics-operator/0.68.0/manifests/allow-webhook-traffic_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: vm-operator
  name: allow-webhook-traffic
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          webhook: enabled
    ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vm-operator
      control-plane: controller-manager
  policyTypes:
  - Ingress
